src/objects/Patient_Health_History__c.object
<CustomObject>
    <description>Check in and health history documents for our patients.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Health Histories</relationshipLabel>
        <relationshipName>Patient_Health_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actonel_Why__c</fullName>
        <label>Actonel Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actonel__c</fullName>
        <label>Actonel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addiction_Treatment__c</fullName>
        <label>Addiction Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advised_precautions_detail__c</fullName>
        <label>Advised precautions detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advised_to_take_special_precautions__c</fullName>
        <label>Advised to take special precautions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alcohol_Duration__c</fullName>
        <label>Alcohol Duration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alcohol_Frequency__c</fullName>
        <label>Alcohol Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allergy_Egg__c</fullName>
        <label>Allergy (Egg)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Latex__c</fullName>
        <label>Allergy (Latex)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Other_Detail__c</fullName>
        <label>Allergy (Other - Detail)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allergy_Other__c</fullName>
        <label>Allergy (Other)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Seasonal__c</fullName>
        <label>Allergy (Seasonal)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Shellfish__c</fullName>
        <label>Allergy (Shellfish)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Soy__c</fullName>
        <label>Allergy (Soy)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_to_Medication__c</fullName>
        <label>Allergy to Medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anemia__c</fullName>
        <label>Anemia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anxiety__c</fullName>
        <label>Anxiety</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Immune_Disease__c</fullName>
        <label>Any Immune Disease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_Other_Conditions__c</fullName>
        <label>Any Other Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_major_medial_issues__c</fullName>
        <label>Any major medial issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_nursing__c</fullName>
        <label>Are you nursing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_pregnant__c</fullName>
        <label>Are you pregnant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_taking_birth_control_pills__c</fullName>
        <label>Are you taking birth control pills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aredia_Why__c</fullName>
        <label>Aredia Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aredia__c</fullName>
        <label>Aredia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arthritis__c</fullName>
        <label>Arthritis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asthma__c</fullName>
        <label>Asthma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Outcome_Detail__c</fullName>
        <label>Bad Outcome Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bad_medical_outcome__c</fullName>
        <label>Bad medical outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonefos_Why__c</fullName>
        <label>Bonefos Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonefos__c</fullName>
        <label>Bonefos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boniva_Why__c</fullName>
        <label>Boniva Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Boniva__c</fullName>
        <label>Boniva</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breathing_Problems__c</fullName>
        <label>Breathing Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPAP__c</fullName>
        <label>CPAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancer_Details__c</fullName>
        <label>Cancer Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cancer__c</fullName>
        <label>Cancer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cardiologist_Name__c</fullName>
        <label>Cardiologist Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardiologist_Phone__c</fullName>
        <label>Cardiologist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Celebrex_Why__c</fullName>
        <label>Celebrex Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celebrex__c</fullName>
        <label>Celebrex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemotherapeutic_Agents_Why__c</fullName>
        <label>Chemotherapeutic Agents Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chemotherapeutic_Agents__c</fullName>
        <label>Chemotherapeutic Agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chemotherapy__c</fullName>
        <label>Chemotherapy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chest_Pain_on_Exertion__c</fullName>
        <label>Chest Pain on Exertion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chief_Dental_Problems__c</fullName>
        <label>Chief Dental Problems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chron_s_Disease__c</fullName>
        <label>Chron&apos;s Disease</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chronic_Bronchitis__c</fullName>
        <label>Chronic Bronchitis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chronic_Fatigue__c</fullName>
        <label>Chronic Fatigue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circulatory_Problems__c</fullName>
        <label>Circulatory Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Congenital_Heart__c</fullName>
        <label>Congenital Heart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Physician_City__c</fullName>
        <label>Current Physician City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Physician_Name__c</fullName>
        <label>Current Physician Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Physician_Phone_Number__c</fullName>
        <label>Current Physician Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Physician_State__c</fullName>
        <label>Current Physician State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Physician_Street_Address__c</fullName>
        <label>Current Physician Street Address</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Physician_Zip__c</fullName>
        <label>Current Physician Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Physicians_JSON__c</fullName>
        <label>Current Physicians JSON</label>
        <length>1027</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <label>Current Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Heart__c</fullName>
        <label>Damaged Heart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Replaced_Joint__c</fullName>
        <label>Date Replaced Joint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defibrillator__c</fullName>
        <label>Defibrillator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Improvements__c</fullName>
        <label>Dental Improvements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Splint__c</fullName>
        <label>Dental Splint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabete_Type__c</fullName>
        <label>Diabetes Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type I</fullName>
                </value>
                <value>
                    <fullName>Type II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Control_Method__c</fullName>
        <label>Diabetes Control Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diet and Exercise</fullName>
                </value>
                <value>
                    <fullName>Oral Medication</fullName>
                </value>
                <value>
                    <fullName>IV Insulin</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Diet_Exercise__c</fullName>
        <label>Diabetes Diet Exercise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Glycemic__c</fullName>
        <label>Diabetes Glycemic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HbA1C &lt; 6%</fullName>
                </value>
                <value>
                    <fullName>HbA1C 6-7%</fullName>
                </value>
                <value>
                    <fullName>HbA1C 7.1-8%</fullName>
                </value>
                <value>
                    <fullName>HbA1C &gt; 8%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes_Oral_Medication__c</fullName>
        <label>Diabetes Oral Medication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diabetes__c</fullName>
        <label>Diabetes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Didronel_Why__c</fullName>
        <label>Didronel Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Didronel__c</fullName>
        <label>Didronel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty_Chewing__c</fullName>
        <label>Difficulty Chewing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver_License_Number__c</fullName>
        <label>Driver License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Monitoring_Rep_Name__c</fullName>
        <label>Drug Monitoring Rep Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Monitoring_Rep_Relationship__c</fullName>
        <label>Drug Monitoring Rep Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Treatment__c</fullName>
        <label>Drug Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dry_Mouth__c</fullName>
        <label>Dry Mouth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Link__c</fullName>
        <description>Internal link for staff to edit the health history (at time of this field&apos;s creation, the code grabs the most recently created health history for editing... not necessarily the health history from which this link was generated)</description>
        <formula>HYPERLINK(&quot;/apex/check_in?HealthHistoryID=&quot; + Id + &quot;&amp;AccountID=&quot; + Account__c, &quot;Edit Health History&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empyhsema__c</fullName>
        <label>Empyhsema</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enjoy_Wearing_Dentures__c</fullName>
        <label>Enjoy Wearing Dentures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Epilepsy_Seizures__c</fullName>
        <label>Epilepsy Seizures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excessive_Bleeding__c</fullName>
        <label>Excessive Bleeding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explain_Major_Medical_Issues__c</fullName>
        <label>Explain Major Medical Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fainting__c</fullName>
        <label>Fainting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fosamax_Why__c</fullName>
        <label>Fosamax Why</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fosamax__c</fullName>
        <label>Fosamax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gall_Bladder_Problems__c</fullName>
        <label>Gall Bladder Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Dentist_Last_Visit__c</fullName>
        <label>General Dentist Last Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Dentist_Phone__c</fullName>
        <label>General Dentist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Dentist__c</fullName>
        <label>General Dentist</label>
        <length>120</length>
        <type>Text</type>
    </fields>
</CustomObject>